--- a/server/package.json
+++ b/server/package.json
@@ -10,16 +10,26 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "express-validator": "^7.2.1",
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.12.0",
+    "mongoose": "^8.9.5",
+    "nodemailer": "^6.9.16",
+    "uuid": "^11.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.18.0",
     "@stylistic/eslint-plugin": "^2.13.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.7",
+    "@types/nodemailer": "^6.4.17",
     "dotenv": "^16.4.7",
     "eslint": "^9.18.0",
     "eslint-plugin-import": "^2.31.0",
