--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -37,9 +37,13 @@ jobs:
           node-version: 18
           cache: 'npm'
       - name: Install Dependencies
-        run: npm install
+        run: |
+          cd client
+          npm install
       - name: Build
-        run: npm run build
+        run: |
+          cd client
+          npm run build
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Upload artifact
