specify folder for client deploy

--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -34,6 +34,7 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
+          cache-dependency-path: client/package-lock.json
           node-version: 18
           cache: 'npm'
       - name: Install Dependencies
@@ -50,7 +51,7 @@ jobs:
         uses: actions/upload-pages-artifact@v3
         with:
           # Upload entire repository
-          path: './dist'
+          path: ./client/dist
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
