--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,6 @@
 PORT=5000
-API_URL='http://localhost:5000/api'
-CLIENT_URL='http://localhost:5173'
+API_URL='https://fullstack-authentication-rahk.onrender.com/api'
+CLIENT_URL='https://yarbest.github.io/fullstack-authentication'
 JWT_ACCESS_SECRET='JWT_ACCESS_SECRET'
 JWT_REFRESH_SECRET='JWT_REFRESH_SECRET'
 SMTP_HOST='smtp.gmail.com'
